# METIS

./: CMakeLists.txt
conf/: gkbuild.cmake
include/: metis.h
programs/: gpmetis.c  mpmetis.c
